# Bombeatbyx.tui

./: .gitignore  AGENTS.md  cover.avif
.agents/: AGENTS.md
.agents/context/: business-context.md  objectives.md  tech-stack.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs  tui.rs
client/src/game/: app.rs  bombs.rs  controls.rs  input.rs  mod.rs  physics.rs  rhythm.rs  ui.rs
client/src/game/ui/: mod.rs  render_map.rs  render_menu.rs  render_rhythm.rs
client/src/local/: app.rs  controls.rs  mod.rs  settings.rs
client/src/local/app/: game.rs  inputs.rs  local_server.rs
client/src/network/: connection.rs  messages.rs  mod.rs  tick.rs
client/src/screens/: lobby.rs  main_menu.rs  mod.rs
client/src/ui/: animation.rs  ascii_art_text.rs  mod.rs  popup.rs  render_lobby.rs  render_map.rs  render_menu.rs  render_rhythm.rs
client/src/ui/game_screen/: helpers.rs  map.rs  mod.rs  sidebar.rs  stats.rs
client/src/ui/lobby_screen/: info.rs  mod.rs  players.rs  rules.rs
client/src/ui/menu/: host.rs  join.rs  main.rs  mod.rs  pause.rs  settings.rs
client/src/ui/victory_screen/: helpers.rs  mod.rs  particles.rs  (+1 more)
common/src/: game.rs  lib.rs  messages.rs
common/src/game/: actions.rs  bombs.rs  context.rs  mod.rs  models.rs  physics.rs  rhythm.rs  spawns.rs  state.rs
server/: Cargo.toml
server/src/: main.rs  state.rs  ws.rs
server/src/websockets/: handlers.rs  mod.rs  rooms.rs  utils.rs
server/src/websockets/rooms/: mod.rs
server/src/websockets/rooms/handlers/: config.rs  entry.rs  game.rs  host.rs  mod.rs  query.rs
(+15 files in other folders)
