[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.32"
